[package]
name = "miobio_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.8.0"
tokio = { version = "1.10.0", features = ["full"] }
reqwest = "0.12.11"
ctrlc = "3.1.0"
miobio_core = { path = "../miobio_core" }
miobio_rabbit = { path = "../miobio_rabbit" }
miobio_bus = { path = "../miobio_bus" }
